[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/scripts/Outline.gd" type="Script" id=1]
[ext_resource path="res://resources/materials/dough_material.material" type="Material" id=2]
[ext_resource path="res://resources/images/TableTexture.png" type="Texture" id=3]

[node name="Texture" type="TextureRect"]
material = ExtResource( 2 )
margin_left = 160.0
margin_top = 224.0
margin_right = 416.0
margin_bottom = 400.0
rect_scale = Vector2( 1, 1.08 )
texture = ExtResource( 3 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_Texture_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Texture_mouse_exited"]
